@@ -21,6 +21,7 @@ def test_one_neighbor(lldpd1, lldpd, lldpcli, namespaces):
                        "lldp.eth0.rid": "1",
                        "lldp.eth0.chassis.mac": "00:00:00:00:00:02",
                        "lldp.eth0.chassis.name": "ns-2.example.com",
+                       "lldp.eth0.chassis.ttl": "120",
                        "lldp.eth0.chassis.mgmt-ip": "fe80::200:ff:fe00:2",
                        "lldp.eth0.chassis.Bridge.enabled": "off",
                        "lldp.eth0.chassis.Wlan.enabled": "off",
