@@ -29,6 +29,7 @@ Interface:    eth0, via: LLDP, RID: 1, Time: 0 day, 00:00:{seconds}
     ChassisID:    mac 00:00:00:00:00:02
     SysName:      ns-2.example.com
     SysDescr:     Spectacular GNU/Linux 2016 {uname}
+    TTL:          120
     MgmtIP:       fe80::200:ff:fe00:2
     Capability:   Bridge, off
     Capability:   Router, {router}
@@ -82,6 +83,7 @@ def test_json_output(lldpd1, lldpd, lldpcli, namespaces, uname):
                             "value": "00:00:00:00:00:02"
                         },
                         "descr": "Spectacular GNU/Linux 2016 {}".format(uname),
+                        "ttl": "120",
                         "mgmt-ip": "fe80::200:ff:fe00:2",
                         "capability": [
                             {"type": "Bridge", "enabled": False},
@@ -125,6 +127,7 @@ def test_xml_output(lldpd1, lldpd, lldpcli, namespaces, uname):
    <id label="ChassisID" type="mac">00:00:00:00:00:02</id>
    <name label="SysName">ns-2.example.com</name>
    <descr label="SysDescr">Spectacular GNU/Linux 2016 {uname}</descr>
+   <ttl label="TTL">120</ttl>
    <mgmt-ip label="MgmtIP">fe80::200:ff:fe00:2</mgmt-ip>
    <capability label="Capability" type="Bridge" enabled="off"/>
    <capability label="Capability" type="Router" enabled="{router}"/>
