@@ -1,6 +1,7 @@
 lldpd (0.9.4)
   * Change:
     + Make lldpd accepts a `-p` option to specify the PID file.
+    + lldpcli will now display chassis TTL when detailed view is enabled.
 
 lldpd (0.9.3)
   * Change:
